--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Training Timer</title>
+  <title>Workout Timer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,11 +11,11 @@
   <div class="countdown">0:00:00</div>
   <div class="input-container">
     <label for="inputTime1">Activity Time:</label>
-    <input type="number" id="inputTime1"
+    <input type="number" id="inputTime1" placeholder="in seconds">
   </div>
   <div class="input-container">
     <label for="inputTime2">Resting Time:</label>
-    <input type="number" id="inputTime2">
+    <input type="number" id="inputTime2" placeholder="in seconds">
   </div>
   <div class="input-container">
     <label for="inputLaps">Number of Rounds:</label>
