--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Workout Timer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <div class="countdown">0:00:00</div>
-  <div class="input-container">
-    <label for="inputTime1">Activity Time:</label>
-    <input type="number" id="inputTime1" placeholder="in seconds">
-  </div>
-  <div class="input-container">
-    <label for="inputTime2">Resting Time:</label>
-    <input type="number" id="inputTime2" placeholder="in seconds">
-  </div>
-  <div class="input-container">
-    <label for="inputLaps">Number of Rounds:</label>
-    <input type="number" id="inputLaps">
-  </div>
-  
-  <div class="button-container">
-	<button onclick="startCountdown()">Start</button>
-	<button onclick="stopCountdown()">Stop</button>
-  </div>
-
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Workout Timer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="cueworkout">...</div>
+    <div class="countdown">0:00:00</div>
+    <div class="cuerounds">...</div>
+    <div class="input-container">
+      <label for="inputTime1">Activity Time:</label>
+      <input type="number" id="inputTime1" placeholder="in seconds">
+    </div>
+    <div class="input-container">
+      <label for="inputTime2">Resting Time:</label>
+      <input type="number" id="inputTime2" placeholder="in seconds">
+    </div>
+    <div class="input-container">
+      <label for="inputRounds">Number of Rounds:</label>
+      <input type="number" id="inputRounds">
+    </div>
+    <div class="button-container">
+      <button onclick="startCountdown()">Start</button>
+      <button onclick="stopCountdown()">Stop</button>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
