--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="cueworkout">...</div>
+    <div class="cueworkout">Press START</div>
     <div class="countdown">0:00:00</div>
-    <div class="cuerounds">...</div>
+    <div class="cuerounds">Press START</div>
     <div class="input-container">
       <label for="inputTime1">Activity Time:</label>
       <input type="number" id="inputTime1" placeholder="in seconds">
@@ -23,8 +23,8 @@
       <input type="number" id="inputRounds">
     </div>
     <div class="button-container">
-      <button onclick="startCountdown()">Start</button>
-      <button onclick="stopCountdown()">Stop</button>
+      <button onclick="startCountdown()">START</button>
+      <button onclick="stopCountdown()">STOP</button>
     </div>
     <script src="script.js"></script>
   </body>
