--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="language-selector">
+      <select id="language-select">
+        <option value="en">English</option>
+        <option value="pt">Português</option>
+      </select>
+    </div>
+    <div class="spacer"></div>
     <div class="cueworkout">Press START</div>
-    <div class="countdown">0:00:00</div>
+    <div class="countdown">00:00:00</div>
     <div class="cuerounds">Press START</div>
     <div class="input-container">
       <label for="inputTime1">Activity Time:</label>
