--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <input type="number" id="inputRounds">
     </div>
     <div class="button-container">
-      <button onclick="startCountdown()">START</button>
-      <button onclick="stopCountdown()">STOP</button>
+      <button onclick="startStop()">START</button>
+	  <button onclick="pauseResume()" disabled>PAUSE</button>
     </div>
     <script src="script.js"></script>
   </body>
