--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <label for="inputRounds">Number of Rounds:</label>
       <input type="number" id="inputRounds">
     </div>
+	<div class="input-container">
+      <label for="inputTime3">Break Time:</label>
+      <input type="number" id="inputTime3" placeholder="in seconds">
+    </div>
     <div class="button-container">
       <button onclick="startStop()">START</button>
 	  <button onclick="pauseResume()" disabled>PAUSE</button>
