--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
       <label for="inputRounds">Number of Rounds:</label>
       <input type="number" id="inputRounds">
     </div>
-	<div class="input-container">
+    <div class="input-container">
       <label for="inputTime3">Break Time:</label>
       <input type="number" id="inputTime3" placeholder="in seconds">
     </div>
+    <div class="switch-container">
+      <label for="switchToggle">Lock Buttons</label>
+      <input type="checkbox" id="switchToggle" disabled>
+    </div>
     <div class="button-container">
       <button onclick="startStop()">START</button>
-	  <button onclick="pauseResume()" disabled>PAUSE</button>
+      <button onclick="pauseResume()" disabled>PAUSE</button>
     </div>
     <script src="script.js"></script>
   </body>
