--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Workout Timer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="Cache-Control" content="max-age=2592000"> <!-- Cache for 30 days -->
+    <meta http-equiv="Expires" content="<?php echo gmdate('D, d M Y H:i:s', time() + 2592000); ?> GMT">
   </head>
   <body>
     <div class="language-selector">
